--- a/default-logins/UCMDB/ucmdb-default-login.yaml
+++ b/default-logins/UCMDB/ucmdb-default-login.yaml
@@ -1,7 +1,7 @@
 id: ucmdb-default-login
 
 info:
-  name: Micro Focus UCMDB Default Credentials
+  name: Micro Focus UCMDB Default Login
   author: dwisiswant0
   severity: high
   tags: ucmdb,default-login
