--- a/default-logins/abb/cs141-default-login.yaml
+++ b/default-logins/abb/cs141-default-login.yaml
@@ -1,7 +1,7 @@
 id: cs141-default-login
 
 info:
-  name: CS141 SNMP Module Default Credentials
+  name: CS141 SNMP Module Default Login
   author: socketz
   severity: medium
   reference: https://www.generex.de/media/pages/packages/documents/manuals/f65348d5b6-1628841637/manual_CS141_en.pdf
