--- a/default-logins/aem/aem-default-login.yaml
+++ b/default-logins/aem/aem-default-login.yaml
@@ -1,7 +1,7 @@
 id: aem-default-login
 
 info:
-  name: Adobe AEM Default Credentials
+  name: Adobe AEM Default Login
   author: random-robbie
   severity: critical
   tags: aem,default-login,fuzz
