--- a/default-logins/alibaba/canal-default-login.yaml
+++ b/default-logins/alibaba/canal-default-login.yaml
@@ -1,7 +1,7 @@
 id: canal-default-login
 
 info:
-  name: Alibaba Canal Default Credentials
+  name: Alibaba Canal Default Login
   author: pdteam
   severity: high
   tags: alibaba,default-login
