--- a/default-logins/ambari/ambari-default-login.yaml
+++ b/default-logins/ambari/ambari-default-login.yaml
@@ -1,7 +1,7 @@
-id: ambari-default-credentials
+id: ambari-default-login
 
 info:
-  name: Apache Ambari Default Credentials
+  name: Apache Ambari Default Login
   author: pdteam
   severity: medium
   tags: ambari,default-login
