--- a/default-logins/apache/airflow-default-login.yaml
+++ b/default-logins/apache/airflow-default-login.yaml
@@ -1,7 +1,7 @@
-id: airflow-default-credentials
+id: airflow-default-login
 
 info:
-  name: Apache Airflow Default Credentials
+  name: Apache Airflow Default Login
   author: pdteam
   severity: critical
   tags: airflow,default-login
