--- a/default-logins/apache/superset-default-login.yaml
+++ b/default-logins/apache/superset-default-login.yaml
@@ -1,7 +1,7 @@
-id: apache-superset-default-credentials
+id: apache-superset-default-login
 
 info:
-  name: Apache Superset Default Credentials
+  name: Apache Superset Default Login
   author: dhiyaneshDK
   severity: high
   reference: https://github.com/detectify/ugly-duckling/blob/master/modules/crowdsourced/apache-superset-default-credentials.json
