--- a/default-logins/apache/tomcat-default-login.yaml
+++ b/default-logins/apache/tomcat-default-login.yaml
@@ -1,6 +1,6 @@
 id: tomcat-default-login
 info:
-  name: Tomcat Manager Default Credentials
+  name: Tomcat Manager Default Login
   author: pdteam
   severity: high
   tags: tomcat,apache,default-login
