--- a/default-logins/arl/arl-default-login.yaml
+++ b/default-logins/arl/arl-default-login.yaml
@@ -1,7 +1,7 @@
 id: arl-default-login
 
 info:
-  name: ARL Default Credentials
+  name: ARL Default Login
   author: pikpikcu
   severity: high
   tags: arl,default-login
