--- a/default-logins/chinaunicom/chinaunicom-default-login.yaml
+++ b/default-logins/chinaunicom/chinaunicom-default-login.yaml
@@ -1,7 +1,7 @@
 id: chinaunicom-default-login
 
 info:
-  name: Chinaunicom Modem Default Credentials
+  name: Chinaunicom Modem Default Login
   author: princechaddha
   severity: high
   tags: chinaunicom,default-login
