--- a/default-logins/dvwa/dvwa-default-login.yaml
+++ b/default-logins/dvwa/dvwa-default-login.yaml
@@ -1,6 +1,6 @@
 id: dvwa-default-login
 info:
-  name: DVWA Default Credentials
+  name: DVWA Default Login
   author: pdteam
   severity: critical
   tags: dvwa,default-login
