--- a/default-logins/exacqvision/exacqvision-default-login.yaml
+++ b/default-logins/exacqvision/exacqvision-default-login.yaml
@@ -1,7 +1,7 @@
 id: exacqvision-default-login
 
 info:
-  name: ExacqVision Default Credentials
+  name: ExacqVision Default Login
   author: ELSFA7110
   severity: high
   tags: exacqvision,default-login
