--- a/default-logins/flir/flir-default-login.yaml
+++ b/default-logins/flir/flir-default-login.yaml
@@ -1,7 +1,7 @@
 id: flir-default-login
 
 info:
-  name: Flir Default Credentials
+  name: Flir Default Login
   author: pikpikcu
   severity: medium
   tags: default-login,flir,camera,iot
