--- a/default-logins/glpi/glpi-default-login.yaml
+++ b/default-logins/glpi/glpi-default-login.yaml
@@ -1,6 +1,6 @@
 id: glpi-default-login
 info:
-  name: GLPI Default Credentials
+  name: GLPI Default Login
   author: andysvints
   severity: high
   tags: glpi,default-login
