--- a/default-logins/grafana/grafana-default-login.yaml
+++ b/default-logins/grafana/grafana-default-login.yaml
@@ -1,6 +1,6 @@
 id: grafana-default-login
 info:
-  name: Grafana Default Credentials
+  name: Grafana Default Login
   author: pdteam
   severity: high
   tags: grafana,default-login
