--- a/default-logins/hongdian/hongdian-default-login.yaml
+++ b/default-logins/hongdian/hongdian-default-login.yaml
@@ -1,7 +1,7 @@
 id: hongdian-default-password
 
 info:
-  name: Hongdian Default Credentials
+  name: Hongdian Default Login
   author: gy741
   severity: high
   tags: hongdian,default-login
