--- a/default-logins/ibm/ibm-storage-default-credential.yaml
+++ b/default-logins/ibm/ibm-storage-default-credential.yaml
@@ -1,7 +1,7 @@
 id: ibm-storage-default-login
 
 info:
-  name: IBM Storage Management Default Credentials
+  name: IBM Storage Management Default Login
   author: madrobot
   severity: medium
   tags: default-login,ibm
