--- a/default-logins/idemia/idemia-biometrics-default-login.yaml
+++ b/default-logins/idemia/idemia-biometrics-default-login.yaml
@@ -1,10 +1,10 @@
 id: idemia-biometrics-default-login
 
 info:
-  name: IDEMIA BIOMetrics Default Credentials
+  name: IDEMIA BIOMetrics Default Login
   author: Techryptic (@Tech)
   severity: high
-  description: Default Credentials of password=12345 on IDEMIA BIOMetrics application.
+  description: Default Login of password=12345 on IDEMIA BIOMetrics application.
   reference: https://www.google.com/search?q=idemia+password%3D+"12345"
   tags: idemia,biometrics,default-login
 
