--- a/default-logins/minio/minio-default-login.yaml
+++ b/default-logins/minio/minio-default-login.yaml
@@ -1,7 +1,7 @@
 id: minio-default-login
 
 info:
-  name: Minio Default Credentials
+  name: Minio Default Login
   author: pikpikcu
   severity: medium
   tags: default-login,minio
