--- a/default-logins/nexus/nexus-default-login.yaml
+++ b/default-logins/nexus/nexus-default-login.yaml
@@ -1,7 +1,7 @@
 id: nexus-default-login
 
 info:
-  name: Nexus Default Credentials
+  name: Nexus Default Login
   author: pikpikcu
   severity: high
   tags: nexus,default-login
