--- a/default-logins/nps/nps-default-login.yaml
+++ b/default-logins/nps/nps-default-login.yaml
@@ -1,7 +1,7 @@
 id: nps-default-login
 
 info:
-  name: NPS Default Credentials
+  name: NPS Default Login
   author: pikpikcu
   severity: high
   tags: nps,default-login
