--- a/default-logins/ofbiz/ofbiz-default-login.yaml
+++ b/default-logins/ofbiz/ofbiz-default-login.yaml
@@ -1,7 +1,7 @@
-id: ofbiz-default-credentials
+id: ofbiz-default-login
 
 info:
-  name: Apache OfBiz Default Credentials
+  name: Apache OfBiz Default Login
   author: pdteam
   severity: medium
   tags: ofbiz,default-login
