--- a/default-logins/oracle/businessintelligence-default-login.yaml
+++ b/default-logins/oracle/businessintelligence-default-login.yaml
@@ -1,7 +1,7 @@
 id: oracle-business-intelligence-login
 
 info:
-  name: Oracle Business Intelligence Default Credentials
+  name: Oracle Business Intelligence Default Login
   author: milo2012
   severity: high
   tags: oracle,default-login
