--- a/default-logins/panabit/panabit-default-login.yaml
+++ b/default-logins/panabit/panabit-default-login.yaml
@@ -1,7 +1,7 @@
 id: panabit-default-login
 
 info:
-  name: Panabit Gateway Default Credentials
+  name: Panabit Gateway Default Login
   author: pikpikcu
   severity: high
   reference: https://max.book118.com/html/2017/0623/117514590.shtm
