--- a/default-logins/rabbitmq/rabbitmq-default-login.yaml
+++ b/default-logins/rabbitmq/rabbitmq-default-login.yaml
@@ -1,7 +1,7 @@
 id: rabbitmq-default-login
 
 info:
-  name: RabbitMQ admin Default Credentials
+  name: RabbitMQ admin Default Login
   author: fyoorer,dwisiswant0
   severity: high
   tags: rabbitmq,default-login
