--- a/default-logins/rockmongo/rockmongo-default-login.yaml
+++ b/default-logins/rockmongo/rockmongo-default-login.yaml
@@ -1,7 +1,7 @@
 id: rockmongo-default-login
 
 info:
-  name: Rockmongo Default Credentials
+  name: Rockmongo Default Login
   author: pikpikcu
   severity: high
   tags: rockmongo,default-login
