--- a/default-logins/showdoc/showdoc-default-login.yaml
+++ b/default-logins/showdoc/showdoc-default-login.yaml
@@ -1,7 +1,7 @@
 id: showdoc-default-login
 
 info:
-  name: Showdoc Default Credentials
+  name: Showdoc Default Login
   author: pikpikcu
   severity: medium
   reference:
