--- a/default-logins/spectracom/spectracom-default-login.yaml
+++ b/default-logins/spectracom/spectracom-default-login.yaml
@@ -1,7 +1,7 @@
 id: spectracom-default-login
 
 info:
-  name: Spectracom Default Credentials
+  name: Spectracom Default Login
   author: madrobot
   severity: medium
   tags: spectracom,default-login
