--- a/default-logins/szhe/szhe-default-login.yaml
+++ b/default-logins/szhe/szhe-default-login.yaml
@@ -1,7 +1,7 @@
 id: szhe-default-login
 
 info:
-  name: Szhe Default Credentials
+  name: Szhe Default Login
   author: pikpikcu
   severity: low
   tags: szhe,default-login
