--- a/default-logins/vidyo/vidyo-default-login.yaml
+++ b/default-logins/vidyo/vidyo-default-login.yaml
@@ -1,7 +1,7 @@
-id: vidyo-default-credentials
+id: vidyo-default-login
 
 info:
-  name: Vidyo Default Credentials
+  name: Vidyo Default Login
   author: izn0u
   severity: medium
   description: test for default cred super:password
