--- a/default-logins/viewpoint/trilithic-viewpoint-login.yaml
+++ b/default-logins/viewpoint/trilithic-viewpoint-login.yaml
@@ -1,7 +1,7 @@
 id: trilithic-viewpoint-default
 
 info:
-  name: Trilithic Viewpoint Default Credentials
+  name: Trilithic Viewpoint Default Login
   author: davidmckennirey
   severity: high
   description: |
