--- a/default-logins/visionhub/visionhub-default-login.yaml
+++ b/default-logins/visionhub/visionhub-default-login.yaml
@@ -1,10 +1,10 @@
-id: visionhub-default-credentials
+id: visionhub-default-login
 
 info:
-  name: VisionHub Default Credentials
+  name: VisionHub Default Login
   author: Techryptic (@Tech)
   severity: high
-  description: Default Credentials of admin:admin on VisionHub application.
+  description: Default Login of admin:admin on VisionHub application.
   tags: visionhub,default-login
   reference: https://www.qognify.com/products/visionhub/
 
