--- a/default-logins/wifisky/wifisky-default-login.yaml
+++ b/default-logins/wifisky/wifisky-default-login.yaml
@@ -1,7 +1,7 @@
 id: wifisky-default-login
 
 info:
-  name: Wifisky Default Credentials
+  name: Wifisky Default Login
   author: pikpikcu
   severity: high
   tags: default-login,wifisky
