--- a/default-logins/wso2/wso2-default-login.yaml
+++ b/default-logins/wso2/wso2-default-login.yaml
@@ -1,7 +1,7 @@
 id: wso2-default-login
 
 info:
-  name: WSO2 Management Console Default Credentials
+  name: WSO2 Management Console Default Login
   author: cocxanh
   severity: high
   reference: https://docs.wso2.com/display/UES100/Accessing+the+Management+Console
