--- a/default-logins/zabbix/zabbix-default-login.yaml
+++ b/default-logins/zabbix/zabbix-default-login.yaml
@@ -1,7 +1,7 @@
-id: zabbix-default-credentials
+id: zabbix-default-login
 
 info:
-  name: Zabbix Default Credentials
+  name: Zabbix Default Login
   author: pdteam
   severity: critical
   tags: zabbix,default-login
