--- a/default-logins/zmanda/zmanda-default-login.yaml
+++ b/default-logins/zmanda/zmanda-default-login.yaml
@@ -1,10 +1,10 @@
 id: zmanda-default-login
 
 info:
-  name: Zmanda Default Credentials
+  name: Zmanda Default Login
   author: Techryptic (@Tech)
   severity: high
-  description: Default Credentials of admin:admin on Zmanda application.
+  description: Default Login of admin:admin on Zmanda application.
   reference: https://www.zmanda.com
   tags: zmanda,default-login
 
