--- a/default-logins/dell/emcecom-default-login.yaml
+++ b/default-logins/dell/emcecom-default-login.yaml
@@ -1,10 +1,10 @@
-id: dell-emc-ecom-default-credentials
+id: dell-emc-ecom-default-login
 
 info:
-  name: Dell EMC ECOM Default Credentials
+  name: Dell EMC ECOM Default Login
   author: Techryptic (@Tech)
   severity: high
-  description: Default Credentials of admin:#1Password on Dell EMC ECOM application.
+  description: Default Login of admin:#1Password on Dell EMC ECOM application.
   reference: https://www.dell.com/support/kbdoc/en-za/000171270/vipr-controller-operation-denied-by-clariion-array-you-are-not-privileged-to-perform-the-requested-operation
   tags: dell,emc,ecom,default-login
 
