--- a/default-logins/druid/druid-default-login.yaml
+++ b/default-logins/druid/druid-default-login.yaml
@@ -1,7 +1,7 @@
 id: druid-default-login
 
 info:
-  name: Druid Default Credentials
+  name: Druid Default Login
   author: pikpikcu
   severity: high
   tags: druid,default-login
