--- a/default-logins/frps/frp-default-login.yaml
+++ b/default-logins/frps/frp-default-login.yaml
@@ -1,7 +1,7 @@
-id: frp-default-credentials
+id: frp-default-login
 
 info:
-  name: Frp Default credentials
+  name: Frp Default Login
   author: pikpikcu
   severity: high
   tags: frp,default-login
