--- a/default-logins/hortonworks/smartsense-default-login.yaml
+++ b/default-logins/hortonworks/smartsense-default-login.yaml
@@ -1,10 +1,10 @@
 id: smartsense-default-login
 
 info:
-  name: HortonWorks SmartSense Default Credentials
+  name: HortonWorks SmartSense Default Login
   author: Techryptic (@Tech)
   severity: high
-  description: Default Credentials of admin:admin on HortonWorks SmartSense application.
+  description: Default Login of admin:admin on HortonWorks SmartSense application.
   reference: https://docs.cloudera.com/HDPDocuments/SS1/SmartSense-1.2.2/bk_smartsense_admin/content/manual_server_login.html
   tags: hortonworks,smartsense,default-login
 
