--- a/default-logins/iptime/iptime-default-login.yaml
+++ b/default-logins/iptime/iptime-default-login.yaml
@@ -1,7 +1,7 @@
 id: iptime-default-login
 
 info:
-  name: ipTIME Default Credentials
+  name: ipTIME Default Login
   author: gy741
   severity: high
   tags: iptime,default-login
