--- a/default-logins/nagios/nagios-default-login.yaml
+++ b/default-logins/nagios/nagios-default-login.yaml
@@ -1,6 +1,6 @@
 id: nagios-default-login
 info:
-  name: Nagios Default Credentials
+  name: Nagios Default Login
   author: iamthefrogy
   severity: high
   tags: nagios,default-login
