--- a/default-logins/paloalto/panos-default-login.yaml
+++ b/default-logins/paloalto/panos-default-login.yaml
@@ -1,10 +1,10 @@
 id: panos-default-login
 
 info:
-  name: Palo Alto Networks PAN-OS Default Credentials
+  name: Palo Alto Networks PAN-OS Default Login
   author: Techryptic (@Tech)
   severity: high
-  description: Default Credentials of admin:admin on Palo Alto Networks PAN-OS application.
+  description: Default Login of admin:admin on Palo Alto Networks PAN-OS application.
   reference: https://docs.paloaltonetworks.com/pan-os/8-1/pan-os-admin/getting-started/integrate-the-firewall-into-your-management-network/perform-initial-configuration.html#:~:text=By%20default%2C%20the%20firewall%20has,with%20other%20firewall%20configuration%20tasks.
   tags: paloalto,panos,default-login
 
