--- a/default-logins/samsung/samsung-wlan-default-login.yaml
+++ b/default-logins/samsung/samsung-wlan-default-login.yaml
@@ -1,7 +1,7 @@
 id: samsung-wlan-default-login
 
 info:
-  name: Samsung Wlan AP (WEA453e) Default Credentials
+  name: Samsung Wlan AP (WEA453e) Default Login
   author: pikpikcu
   severity: high
   reference: https://iryl.info/2020/11/27/exploiting-samsung-router-wlan-ap-wea453e/
