--- a/default-logins/solarwinds/solarwinds-default-login.yaml
+++ b/default-logins/solarwinds/solarwinds-default-login.yaml
@@ -1,7 +1,7 @@
 id: solarwinds-default-admin
 
 info:
-  name: SolarWinds Orion Default Credentials
+  name: SolarWinds Orion Default Login
   author: dwisiswant0
   severity: high
   tags: solarwinds,default-login
