--- a/default-logins/xxljob/xxljob-default-login.yaml
+++ b/default-logins/xxljob/xxljob-default-login.yaml
@@ -1,7 +1,7 @@
 id: xxljob-default-login
 
 info:
-  name: XXL-JOB Default Credentials
+  name: XXL-JOB Default Login
   author: pdteam
   severity: high
   tags: default-login,xxljob
