--- a/default-logins/axis2/axis2-default-login.yaml
+++ b/default-logins/axis2/axis2-default-login.yaml
@@ -1,7 +1,7 @@
-id: axis2-default-password
+id: axis2-default-login
 
 info:
-  name: Axis2 Default Password
+  name: Axis2 Default Login
   author: pikpikcu
   severity: high
   tags: axis,apache,default-login
