--- a/exposed-panels/okta-panel.yaml
+++ b/exposed-panels/okta-panel.yaml
@@ -1,20 +1,25 @@
-id: okta-login-detect
+id: okta-panel
+
 info:
   name: Okta Login Panel
   author: pussycat0x
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22okta%22
-  tags: tech
+  tags: panel,okta
+
 requests:
   - method: GET
     path:
-      - '{{BaseURL}}/'
+      - '{{BaseURL}}'
+
+    redirects: true
+    max-redirects: 2
     matchers-condition: and
     matchers:
       - type: word
         words:
           - '<title>Okta - Sign In</title>'
-        condition: and
+
       - type: status
         status:
           - 200
