--- a/technologies/hp-blade-admin-detect.yaml
+++ b/technologies/hp-blade-admin-detect.yaml
@@ -1,20 +1,23 @@
-id: hp-blade-dmin-detect
+id: hp-blade-system
+
 info:
   name: HP BladeSystem Onboard Administrator
   author: pussycat0x
   severity: info
   reference: https://www.shodan.io/search?query=http.title%3A%22HP+BladeSystem%22
-  tags: tech, hp
+  tags: panel,hp
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "<title>HP BladeSystem Onboard Administrator</title>"
-        condition: and
+
       - type: status
         status:
           - 200
