--- a/.github/workflows/templates-stats.yml
+++ b/.github/workflows/templates-stats.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.repository == 'projectdiscovery/nuclei-templates' && github.ref == 'refs/heads/master'
+    if: github.repository == 'projectdiscovery/nuclei-templates'
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-go@v2
