--- a/network/iplanet-imap-detect.yaml
+++ b/network/iplanet-imap-detect.yaml
@@ -1,17 +1,20 @@
-id: iplanet-messaging-imap-detect
+id: iplanet-imap-detect
+
 info:
   name: iplanet messaging imap protocol
   author: pussycat0x
   severity: info
   tags: network,imap
   metadata:
-     fofa-dork: 'app="iPlanet-Messaging-Server-5.2" && protocol="imap"'
+    fofa-dork: 'app="iPlanet-Messaging-Server-5.2" && protocol="imap"'
+
 network:
   - inputs:
       - data: "\n"
     host:
       - "{{Hostname}}"
       - "{{Hostname}}:110"
+
     matchers:
       - type: word
         words:
