--- a/exposed-panels/openvpn-monitor.yaml
+++ b/exposed-panels/openvpn-monitor.yaml
@@ -6,7 +6,7 @@ info:
   reference: https://openvpn-monitor.openbytes.ie/
   author: geeknik
   severity: high
-  tags: disclosure
+  tags: openvpn,disclosure
 
 requests:
   - method: GET
