--- a/exposed-panels/openvpn-monitor.yaml
+++ b/exposed-panels/openvpn-monitor.yaml
@@ -2,11 +2,11 @@ id: openvpn-monitor
 
 info:
   name: OpenVPN Monitor Disclosure
-  description: openvpn-monitor is a simple python program to generate html that displays the status of an OpenVPN server, including all current connections.
-  reference: https://openvpn-monitor.openbytes.ie/
   author: geeknik
   severity: high
-  tags: openvpn,disclosure
+  description: openvpn-monitor is a simple python program to generate html that displays the status of an OpenVPN server, including all current connections.
+  reference: https://openvpn-monitor.openbytes.ie/
+  tags: openvpn,disclosure,panel
 
 requests:
   - method: GET
@@ -19,6 +19,7 @@ requests:
       - type: status
         status:
           - 200
+
       - type: word
         part: body
         words:
@@ -27,6 +28,7 @@ requests:
           - 'VPN IP'
           - 'Remote IP'
         condition: and
+
       - type: word
         part: header
         words:
