Update and rename wp-plugin-issuu-panel-lfi.yaml to vulnerabilities/wordpress/issuu-panel-lfi.yaml

--- a/vulnerabilities/wordpress/issuu-panel-lfi.yaml
+++ b/vulnerabilities/wordpress/issuu-panel-lfi.yaml
@@ -1,11 +1,11 @@
-id: wp-plugin -issuu-panel-lfi
+id: issuu-panel-lfi
 
 info:
   name: Wordpress Plugin Issuu Panel - RFI & LFI
   author: 0x_Akoko
   severity: high
   reference: https://cxsecurity.com/issue/WLB-2016030131
-  tags: wp,wordpress,lfi
+  tags: wp-plugin,wordpress,lfi
 
 requests:
   - method: GET
