--- a/vulnerabilities/wordpress/issuu-panel-lfi.yaml
+++ b/vulnerabilities/wordpress/issuu-panel-lfi.yaml
@@ -5,7 +5,7 @@ info:
   author: 0x_Akoko
   severity: high
   reference: https://cxsecurity.com/issue/WLB-2016030131
-  tags: wp-plugin,wordpress,lfi
+  tags: wp-plugin,wordpress,lfi,rfi
 
 requests:
   - method: GET
