Update and rename wp-brandfolder-plugin-lfi.yaml to vulnerabilities/wordpress/brandfolder-lfi.yaml

--- a/vulnerabilities/wordpress/brandfolder-lfi.yaml
+++ b/vulnerabilities/wordpress/brandfolder-lfi.yaml
@@ -1,13 +1,13 @@
-id: wp-plugins-brandfolder-plugin-lfi
+id: brandfolder-lfi
 
 info:
-  name: Wordpress brandfolder plugin / RFI & LFI
+  name: Wordpress brandfolder plugin - RFI & LFI
   author: 0x_Akoko
   severity: high
-  tags: wordpress,wp-plugin,lfi,rfi
   reference:
     - https://www.exploit-db.com/exploits/39591
     - https://cxsecurity.com/issue/WLB-2016030120
+  tags: wordpress,wp-plugin,lfi,rfi
 
 requests:
   - method: GET
