Update and rename wp-brandfolder-plugin-open-redirect.yaml to vulnerabilities/wordpress/brandfolder-open-redirect.yaml

--- a/vulnerabilities/wordpress/brandfolder-open-redirect.yaml
+++ b/vulnerabilities/wordpress/brandfolder-open-redirect.yaml
@@ -1,11 +1,11 @@
-id: wp-brandfolder-plugin-open-redirect
+id: brandfolder-open-redirect
 
 info:
   name: Wordpress brandfolder plugin Open Redirect
   author: 0x_Akoko
-  reference: https://www.exploit-db.com/exploits/39591
   severity: low
-  tags: wp,redirect
+  reference: https://www.exploit-db.com/exploits/39591
+  tags: wordpress,wp-plugin,lfi,rfi
 
 requests:
   - method: GET
