--- a/network/iplanet-imap-detect.yaml
+++ b/network/iplanet-imap-detect.yaml
@@ -4,9 +4,9 @@ info:
   name: iplanet messaging imap protocol
   author: pussycat0x
   severity: info
-  tags: network,imap
   metadata:
     fofa-dork: 'app="iPlanet-Messaging-Server-5.2" && protocol="imap"'
+  tags: network,imap
 
 network:
   - inputs:
@@ -19,3 +19,9 @@ network:
       - type: word
         words:
           - "iPlanet Messaging Server"
+
+    extractors:
+      - type: regex
+        part: body
+        regex:
+          - "iPlanet Messaging Server ([0-9.]+)"
