--- a/vulnerabilities/other/commax-credentials-disclosure.yaml
+++ b/vulnerabilities/other/commax-credentials-disclosure.yaml
@@ -1,13 +1,12 @@
-id: commax-cctv-rtsp-credentials-disclosure
+id: commax-credentials-disclosure
 
 info:
   name: COMMAX Smart Home Ruvie CCTV Bridge DVR - RTSP Credentials Disclosure
   author: gy741
   severity: critical
   description: The COMMAX CCTV Bridge for the DVR service allows an unauthenticated attacker to disclose RTSP credentials in plain-text
-  reference:
-    - https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5665.php
-  tags: commax,exposure
+  reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5665.php
+  tags: commax,exposure,camera,iot
 
 requests:
   - method: GET
@@ -20,4 +19,11 @@ requests:
           - "DVR Lists"
           - "rtsp://"
           - "login_check.js"
+          - "MAX USER :"
         condition: and
+
+    extractors:
+      - type: regex
+        part: body
+        regex:
+          - 'rtsp:\/\/([a-z:0-9A-Z@$.]+)\/Streaming\/Chann'
