--- a/exposed-panels/amcrest-login.yaml
+++ b/exposed-panels/amcrest-login.yaml
@@ -5,7 +5,7 @@ info:
   author: DhiyaneshDK
   severity: info
   reference: https://www.exploit-db.com/ghdb/7273
-  tags: tech
+  tags: panel
   metadata:
     shodan-dork: html:"amcrest"
 
