--- a/exposed-panels/amcrest-login.yaml
+++ b/exposed-panels/amcrest-login.yaml
@@ -5,9 +5,10 @@ info:
   author: DhiyaneshDK
   severity: info
   reference: https://www.exploit-db.com/ghdb/7273
-  tags: panel
   metadata:
     shodan-dork: html:"amcrest"
+    google-dork: intext:"amcrest" "LDAP User"
+  tags: panel,camera
 
 requests:
   - method: GET
@@ -18,8 +19,9 @@ requests:
     matchers:
       - type: word
         words:
-          - "amcrest"
-          - "LDAP User"
+          - "Amcrest Technologies"
+          - "LDAPUser"
+        condition: and
 
       - type: status
         status:
