--- a/exposed-panels/intelbras-login.yaml
+++ b/exposed-panels/intelbras-login.yaml
@@ -5,9 +5,10 @@ info:
   author: DhiyaneshDK
   severity: info
   reference: https://www.exploit-db.com/ghdb/7272
-  tags: panel
   metadata:
     shodan-dork: http.title:"Intelbras"
+    google-dork: intitle:"Intelbras" "All Rights Reserved" -.com
+  tags: panel
 
 requests:
   - method: GET
