--- a/iot/automation-direct.yaml
+++ b/iot/automation-direct.yaml
@@ -5,9 +5,10 @@ info:
   author: DhiyaneshDK
   severity: info
   reference: https://www.exploit-db.com/ghdb/7295
-  tags: panel,iot
   metadata:
     shodan-dork: http.title:"C-more -- the best HMI presented by AutomationDirect"
+    google-dork: intitle:"C-more -- the best HMI presented by AutomationDirect"
+  tags: panel,iot
 
 requests:
   - method: GET
@@ -23,3 +24,10 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - '<P align="right">([A-Za-z. 0-9]+)<\/P>'
