--- a/iot/netsurveillance-web.yaml
+++ b/iot/netsurveillance-web.yaml
@@ -5,9 +5,10 @@ info:
   author: DhiyaneshDK
   severity: info
   reference: https://www.exploit-db.com/ghdb/7288
-  tags: tech
   metadata:
     shodan-dork: http.title:"NETSurveillance WEB"
+    google-dork: intitle:"NETSurveillance WEB"
+  tags: tech,iot
 
 requests:
   - method: GET
@@ -18,7 +19,7 @@ requests:
     matchers:
       - type: word
         words:
-          - "NetSuveillanceWebCookie"
+          - "<title>NetSurveillance WEB</title>"
 
       - type: status
         status:
