--- a/technologies/tileserver-gl.yaml
+++ b/technologies/tileserver-gl.yaml
@@ -5,9 +5,10 @@ info:
   author: DhiyaneshDK
   severity: info
   reference: https://www.exploit-db.com/ghdb/7296
-  tags: tech
   metadata:
     shodan-dork: http.title:"TileServer GL - Server for vector and raster maps with GL styles"
+    google-dork: intitle:"TileServer GL - Server for vector and raster maps with GL styles"
+  tags: tech
 
 requests:
   - method: GET
@@ -23,3 +24,10 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - 'Powered by TileServer GL \(([a-z- 0-9.]+)\)'
