--- a/network/tidb-unauth.yaml
+++ b/network/tidb-unauth.yaml
@@ -4,6 +4,8 @@ info:
   name: Unauth TiDB Disclosure
   author: lu4nx
   severity: high
+  metadata:
+    zoomeye-dork: tidb +port:"4000"
   tags: network,tidb
 
 network:
