--- a/dns/azure-takeover-detection.yaml
+++ b/dns/azure-takeover-detection.yaml
@@ -4,13 +4,8 @@ info:
   name: Azure takeover detection
   author: pdteam
   severity: high
-  tags: dns,takeover
-  reference:
-    - https://godiego.tech/posts/STO/ # kudos to @secfaults for sharing process details.
-
-# Update the list with more CNAMEs related to Azure
-# You need to claim the CNAME in Azure portal (https://portal.azure.com) to confirm the takeover.
-# Do not report this without claiming the CNAME.
+  tags: dns,takeover,azure
+  reference: https://godiego.co/posts/STO/
 
 dns:
   - name: "{{FQDN}}"
@@ -40,6 +35,7 @@ dns:
           - "search.windows.net"
           - "servicebus.windows.net"
           - "visualstudio.com"
+
       - type: word
         words:
           - "NXDOMAIN"
