Added an additional matcher for vcenter-version-detect.yaml

--- a/technologies/vcenter-version-detect.yaml
+++ b/technologies/vcenter-version-detect.yaml
@@ -31,10 +31,16 @@ requests:
            </soap:Body>
         </soap:Envelope>
 
+    matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
+
+      - type: word
+        part: body
+        words:
+          - ha-folder-root
 
     extractors:
       - type: regex
