--- a/technologies/vmware-version-detect.yaml
+++ b/technologies/vmware-version-detect.yaml
@@ -1,12 +1,13 @@
-id: vcenter-version-detect
+id: vmware-version-detect
 
 info:
-  name: vcenter-version-detect
+  name: vmware-version-detect
   author: elouhi
   severity: info
   description: Sends a POST request containing a SOAP payload to a vCenter server to obtain version information
   reference:
     - https://www.pwndefend.com/2021/09/23/exposed-vmware-vcenter-servers-around-the-world-cve-2021-22005/
+    - https://svn.nmap.org/nmap/scripts/vmware-version.nse
   tags: tech,vcenter,vmware
 requests:
   - raw:
