--- a/technologies/vmware-version-detect.yaml
+++ b/technologies/vmware-version-detect.yaml
@@ -9,6 +9,7 @@ info:
     - https://www.pwndefend.com/2021/09/23/exposed-vmware-vcenter-servers-around-the-world-cve-2021-22005/
     - https://svn.nmap.org/nmap/scripts/vmware-version.nse
   tags: tech,vcenter,vmware
+
 requests:
   - raw:
       - |
@@ -43,68 +44,15 @@ requests:
         words:
           - ha-folder-root
 
+      - type: word
+        words:
+          - "text/xml"
+        part: header
+
     extractors:
       - type: regex
-        name: name
         part: body
         group: 1
         regex:
           - "<name>(.*?)</name>"
-
-      - type: regex
-        name: version
-        part: body
-        group: 1
-        regex:
           - "<version>(.*?)</version>"
-
-      - type: regex
-        name: build
-        part: body
-        group: 1
-        regex:
-          - "<build>(.*?)</build>"
-
-      - type: regex
-        name: localeVersion
-        part: body
-        group: 1
-        regex:
-          - "<localeVersion>(.*?)</localeVersion>"
-
-
-      - type: regex
-        name: localeBuild
-        part: body
-        group: 1
-        regex:
-          - "<localeBuild>(.*?)</localeBuild>"
-
-
-      - type: regex
-        name: osType
-        part: body
-        group: 1
-        regex:
-          - "<osType>(.*?)</osType>"
-
-      - type: regex
-        name: productLineId
-        part: body
-        group: 1
-        regex:
-          - "<productLineId>(.*?)</productLineId>"
-
-      - type: regex
-        name: apiType
-        part: body
-        group: 1
-        regex:
-          - "<apiType>(.*?)</apiType>"
-
-      - type: regex
-        name: apiVersion
-        part: body
-        group: 1
-        regex:
-          - "<apiVersion>(.*?)</apiVersion>"
