--- a/vulnerabilities/generic/oob-header-based-interaction.yaml
+++ b/vulnerabilities/generic/oob-header-based-interaction.yaml
@@ -26,15 +26,22 @@ requests:
       X-Wap-Profile: http://{{interactsh-url}}/wap.xml
       X-Forwarded-For: spoofed.{{interactsh-url}}
       Contact: root@{{interactsh-url}}
-      X-Forwarded-Host: 'spoofed.{{interactsh-url}}'
-      X-Host: 'spoofed.{{interactsh-url}}'
-      X-Forwarded-Server: 'spoofed.{{interactsh-url}}'
-      X-HTTP-Host-Override: 'spoofed.{{interactsh-url}}'
+      X-Forwarded-Host: spoofed.{{interactsh-url}}
+      X-Host: spoofed.{{interactsh-url}}
+      X-Forwarded-Server: spoofed.{{interactsh-url}}
+      X-HTTP-Host-Override: spoofed.{{interactsh-url}}
       Cache-Control: no-transform
 
+    matchers-condition: or
     matchers:
       - type: word
         part: interactsh_protocol
         name: http
         words:
           - "http"
+
+      - type: word
+        part: interactsh_protocol
+        name: dns
+        words:
+          - "dns"
