--- a/vulnerabilities/generic/request-based-interaction.yaml
+++ b/vulnerabilities/generic/request-based-interaction.yaml
@@ -41,7 +41,14 @@ requests:
         Accept: */*
 
     unsafe: true # Use Unsafe HTTP library for malformed HTTP requests.
+    matchers-condition: or
     matchers:
+      - type: word
+        part: interactsh_protocol
+        name: http
+        words:
+          - "http"
+
       - type: word
         part: interactsh_protocol
         name: http
