--- a/vulnerabilities/generic/request-based-interaction.yaml
+++ b/vulnerabilities/generic/request-based-interaction.yaml
@@ -51,6 +51,6 @@ requests:
 
       - type: word
         part: interactsh_protocol
-        name: http
+        name: dns
         words:
-          - "http"
+          - "dns"
