Update and rename fatpipe-networks-warp-backdoor.yaml to fatpipe-backdoor.yaml

--- a/vulnerabilities/other/fatpipe-backdoor.yaml
+++ b/vulnerabilities/other/fatpipe-backdoor.yaml
@@ -1,4 +1,4 @@
-id: fatpipe-networks-warp-backdoor
+id: fatpipe-backdoor
 
 info:
   name: FatPipe Networks WARP/IPVPN/MPVPN 10.2.2 Hidden Backdoor Account
