--- a/technologies/fatpipe-mpvpn-detect.yaml
+++ b/technologies/fatpipe-mpvpn-detect.yaml
@@ -26,5 +26,6 @@ requests:
     extractors:
       - type: regex
         part: body
+        group: 1
         regex:
           - '<h5>([0-9.a-z]+)<\/h5>'
