Update and rename yzmcms-detected.yaml to yzmcms-detect.yaml

--- a/technologies/yzmcms-detect.yaml
+++ b/technologies/yzmcms-detect.yaml
@@ -1,4 +1,4 @@
-id: yzmcms-detected
+id: yzmcms-detect
 
 info:
   name: YzmCMS Detect
@@ -18,5 +18,6 @@ requests:
           - 200
 
       - type: word
+        part: body
         words:
           - 'Powered By <a href="http://www.yzmcms.com"'
