--- a/technologies/csrfguard-detect.yaml
+++ b/technologies/csrfguard-detect.yaml
@@ -27,24 +27,24 @@ requests:
     matchers-condition: or
     matchers:
       - type: word
-        name: "CSRFGuard version 3.x"
+        name: "CSRFGuard-v3.x"
         words:
           - "FETCH-CSRF-TOKEN"
 
       - type: word
-        name: "CSRFGuard version 4.x"
+        name: "CSRFGuard-v4.x"
         words:
           - "masterTokenValue"
 
       - type: dsl
-        name: "Token-per-page support is not enabled."
+        name: "Disabled-token-per-page"
         condition: and
         dsl:
           - 'status_code_3==400'
           - 'contains(body, "Token-Per-Page functionality is disabled")'
 
       - type: dsl
-        name: "Token-per-page support is enabled."
+        name: "Enabled-token-per-page"
         condition: and
         dsl:
           - 'status_code_3==200'
@@ -61,11 +61,11 @@ requests:
 
       - type: regex
         group: 1
-        name: "Master Token"
+        name: "master-token"
         regex:
           - "(?:masterTokenValue\\s*=\\s*')([^']+)';"
 
       - type: json
-        name: Page tokens
+        name: "page-token"
         json:
           - '.pageTokens'
