--- a/vulnerabilities/wordpress/wordpress-accessible-wpconfig.yaml
+++ b/vulnerabilities/wordpress/wordpress-accessible-wpconfig.yaml
@@ -1,7 +1,7 @@
 id: wordpress-accessible-wpconfig
 info:
   name: WordPress accessible wp-config
-  author: Kiblyn11,zomsop82,madrobot,geeknik,daffainfo
+  author: Kiblyn11,zomsop82,madrobot,geeknik,daffainfo,r12w4n
   severity: high
   tags: wordpress,backups
 
@@ -24,6 +24,7 @@ requests:
       - '{{BaseURL}}/wp-config-backup.txt'
       - '{{BaseURL}}/wp-config.php.save'
       - '{{BaseURL}}/wp-config.php~'
+      - '{{BaseURL}}/wp-config.php-backup'
       - '{{BaseURL}}/wp-config.php.orig'
       - '{{BaseURL}}/wp-config.php.original'
       - '{{BaseURL}}/_wpeprivate/config.json'
@@ -34,7 +35,7 @@ requests:
       - type: word
         words:
           - DB_NAME
-          - WPENGINE_ACCOUNT
+          - DB_PASSWORD
         part: body
       - type: status
         status:
