Add information for CVE-2001-1473

--- a/network/deprecated-sshv1-detection.yaml
+++ b/network/deprecated-sshv1-detection.yaml
@@ -1,14 +1,19 @@
-id: deprecated-sshv1-detection
+id: CVE-2001-1473
 
 info:
   name: Deprecated SSHv1 Protocol Detection
   author: iamthefrogy
-  severity: medium
-  tags: network,ssh,openssh
+  severity: high
+  tags: network,ssh,openssh,cves,cves2001
   description: SSHv1 is deprecated and has known cryptographic issues.
   reference:
     - https://www.kb.cert.org/vuls/id/684820
     - https://nvd.nist.gov/vuln/detail/CVE-2001-1473
+  classification:
+    cvss-metrics: 7.4
+    cvss-score: CVSS:3.0/AV:N/AC:H/PR:N/UI:N/S:U/C:H/I:H/A:N
+    cve-id: CVE-2001-1473
+    cwe-id: CWE-310
 
 network:
   - host:
