--- a/file/php/php-scanner.yaml
+++ b/file/php/php-scanner.yaml
@@ -105,15 +105,21 @@ file:
         regex:
           - 'import_request_variables'
       - type: regex
-        # Avoid use of $GLOBALS
+        # Avoid use of GLOBALS
         regex:
-          - '\\$GLOBALS'
+          - 'GLOBALS'
       - type: regex
         regex:
-          - '\\$_GET'
+          - '_GET'
       - type: regex
         regex:
-          - '\\$_POST'
+          - '_POST'
+      - type: regex
+        regex:
+          - '_COOKIE'
+      - type: regex
+        regex:
+          - '_SESSION'
       - type: regex
         # Ensure the use of type checking validating against booleans (===)
         regex:
