--- a/file/php/php-scanner.yaml
+++ b/file/php/php-scanner.yaml
@@ -212,7 +212,7 @@ file:
       - type: regex
         # MySQLi Extension
         regex:
-          - "mysqli((_real)?_connect)?"
+          - "mysqli((_real)?_connect)?|_query"
       - type: regex
         # Oracle OCI8 DBMS
         regex:
