--- a/file/php/php-scanner.yaml
+++ b/file/php/php-scanner.yaml
@@ -249,3 +249,10 @@ file:
         # XML document
         regex:
           - "x(ptr|path)_new_context"
+      - type: regex
+        # Investigate if GetTableFields is called safely
+        regex:
+          - "GetTableFields"
+      - type: regex
+        regex:
+          - "ini_get.*magic_quotes_gpc.*"
