--- a/vulnerabilities/wordpress/wp-woocommerce-email-verification.yaml
+++ b/vulnerabilities/wordpress/wp-woocommerce-email-verification.yaml
@@ -13,7 +13,8 @@ requests:
     path:
       - "{{BaseURL}}/?alg_wc_ev_verify_email=eyJpZCI6MSwiY29kZSI6MH0="
       - "{{BaseURL}}/blog/?alg_wc_ev_verify_email=eyJpZCI6MSwiY29kZSI6MH0="
-
+    
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
