--- a/exposed-panels/samba-swat-panel.yaml
+++ b/exposed-panels/samba-swat-panel.yaml
@@ -1,13 +1,16 @@
-id: Samba SWAT panel
+id: samba-swat-panel
 info:
-  name: samba-swat-panel
+  name: Samba SWAT panel
   author: PR3R00T
   severity: info
+  tags: panel
+
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
-      - "{{BaseURL}}:901/"
+      - "{{BaseURL}}"
+  
+
     matchers:
       - type: word
         words:
