Update and rename qihang-media-web-credentials-disclosure.yaml to qihang-media-disclosure.yaml

--- a/vulnerabilities/other/qihang-media-disclosure.yaml
+++ b/vulnerabilities/other/qihang-media-disclosure.yaml
@@ -1,4 +1,4 @@
-id: qihang-media-web-credentials-disclosure
+id: qihang-media-disclosure
 
 info:
   name: QiHang Media Web (QH.aspx) Digital Signage 3.0.9 - Cleartext Credentials Disclosure
@@ -16,7 +16,8 @@ requests:
     matchers:
       - type: word
         words:
-          - "User id"
-          - "account"
-          - "password"
+          - "<?xml version"
+          - "<Users>"
+          - "account="
+          - "password="
         condition: and
