--- a/file/keys/amazon-sns-token.yaml
+++ b/file/keys/amazon-sns-token.yaml
@@ -1,10 +1,10 @@
-id: amazon-sns-topic
+id: amazon-sns-token
 
 info:
-  name: Amazon SNS Topic Detect
+  name: Amazon SNS Token Detect
   author: TheBinitGhimire
   severity: info
-  tags: file,token,amazon
+  tags: file,token,amazon,aws
 
 file:
   - extensions:
@@ -12,6 +12,6 @@ file:
 
     extractors:
       - type: regex
-        name: slack-bot-token-strings
+        name: amazon-sns-topic
         regex:
           - 'arn:aws:sns:[a-z0-9\-]+:[0-9]+:[A-Za-z0-9\-_]+'
