--- a/technologies/vmware-version-detect.yaml
+++ b/technologies/vmware-version-detect.yaml
@@ -42,7 +42,8 @@ requests:
       - type: word
         part: body
         words:
-          - ha-folder-root
+          - 'ha-folder-root'
+          - 'RetrieveServiceContentResponse'
 
       - type: word
         words:
@@ -56,3 +57,7 @@ requests:
         regex:
           - "<name>(.*?)</name>"
           - "<version>(.*?)</version>"
+          - "<build>(.*?)</build>"
+          - "<osType>(.*?)</osType>"
+          - "<productLineId>(.*?)</productLineId>"
+          - "<apiType>(.*?)</apiType>"
