--- a/apis/twitter.yaml
+++ b/apis/twitter.yaml
@@ -3,7 +3,7 @@ id: api-twitter
 info:
   name: Twitter API Test
   author: zzeitlin
-  refernce: https://developer.twitter.com/en/docs/twitter-api/api-reference-index
+  reference: https://developer.twitter.com/en/docs/twitter-api/api-reference-index
   severity: info
   tags: api,twitter
 
