--- a/apis/google-elevation.yaml
+++ b/apis/google-elevation.yaml
@@ -1,15 +1,16 @@
-id: api-googlegeocode
+id: api-googleelevation
 
 info:
-  name: Google Geocode API Test
+  name: Google Elevation API Test
   author: zzeitlin
   severity: info
-  tags: api,google,geocode
+  tags: api,google,elevation
 
 requests:
   - method: GET
     path:
-      - "https://maps.googleapis.com/maps/api/geocode/json?latlng=40,30&key={{token}}"
+      - "https://maps.googleapis.com/maps/api/elevation/json?locations=39.7391536,-104.9847034&key={{token}}"
+
     matchers:
       - type: word
         part: body
