--- a/apis/google-mapsembed.yaml
+++ b/apis/google-mapsembed.yaml
@@ -1,7 +1,7 @@
-id: api-googlemapsembedadvanced
+id: api-googlemapsembed
 
 info:
-  name: Google Maps Embed (Advanced) API Test
+  name: Google Maps Embed API Test
   author: zzeitlin
   severity: info
   tags: api,google,maps,embed
@@ -9,7 +9,8 @@ info:
 requests:
   - method: GET
     path:
-      - "https://www.google.com/maps/embed/v1/search?q=record+stores+in+Seattle&key={{token}}"
+      - "https://www.google.com/maps/embed/v1/place?q=Seattle&key={{token}}"
+
     matchers:
       - type: status
         status:
