adding missing condition

--- a/exposures/tokens/digitalocean/tugboat-config-exposure.yaml
+++ b/exposures/tokens/digitalocean/tugboat-config-exposure.yaml
@@ -13,8 +13,8 @@ requests:
     path:
       - "{{BaseURL}}/.tugboat"
 
+    matchers-condition: and
     matchers:
-
       - type: status
         status:
           - 200
