--- a/default-logins/weblogic/weblogic-weak-login.yaml
+++ b/default-logins/weblogic/weblogic-weak-login.yaml
@@ -18,7 +18,28 @@ requests:
         Host: {{Hostname}}
         Content-Type: application/x-www-form-urlencoded
 
-        j_username=weblogic&j_password=Oracle@123&j_character_encoding=UTF-8
+        j_username={{ username }}&j_password={{ password }}&j_character_encoding=UTF-8
+
+    payloads:
+      username:
+        - weblogic
+        - weblogic
+        - weblogic
+        - weblogic
+        - admin
+        - admin
+        - system
+
+      password:
+        - weblogic
+        - weblogic1
+        - welcome1
+        - Oracle@123
+        - 12345678
+        - security
+        - password
+
+    attack: pitchfork
 
     cookie-reuse: true
     matchers-condition: and
