--- a/takeovers/flexbe-takeover.yaml
+++ b/takeovers/flexbe-takeover.yaml
@@ -4,8 +4,10 @@ info:
   name: Flexbe Subdomain Takeover
   author: 0x_Akoko
   severity: high
-  tags: takeover
-  reference: https://github.com/EdOverflow/can-i-take-over-xyz/issues/237
+  tags: takeover,flexbe
+  reference:
+    - https://github.com/EdOverflow/can-i-take-over-xyz/issues/237
+    - https://help.flexbe.com/domains/
 
 requests:
   - method: GET
@@ -15,8 +17,10 @@ requests:
     matchers-condition: and
     matchers:
       - type: word
+        condition: and
         words:
-          - Domain isn't configured
+          - "Domain isn't configured"
+          - "flexbe"
 
       - type: status
         status:
