--- a/default-logins/apache/tomcat-default-login.yaml
+++ b/default-logins/apache/tomcat-default-login.yaml
@@ -30,6 +30,8 @@ requests:
         - tomcat
         - admin
         - role1
+        - both
+        - admin
 
       password:
         - tomcat
@@ -48,6 +50,8 @@ requests:
         - changethis
         - j5Brn9
         - tomcat
+        - tomcat
+        - 123456
 
     attack: pitchfork  # Available options: sniper, pitchfork and clusterbomb
 
