--- a/exposed-panels/contentkeeper-detection.yaml
+++ b/exposed-panels/contentkeeper-detection.yaml
@@ -2,7 +2,7 @@ id: contentkeeper-detection
 
 info:
   name: ContentKeeper Cloud Detection
-  description: ContentKeeper Cloud is the next evolution of cloud filtering that provides schools a seamless and secure way to enable safer and more effective hybrid learni>
+  description: ContentKeeper Cloud is the next evolution of cloud filtering that provides schools a seamless and secure way to enable safer and more effective hybrid learning.
   reference: https://www.contentkeeper.com/
   author: geeknik
   severity: info
