--- a/file/electron/node-integration-enabled.yaml
+++ b/file/electron/node-integration-enabled.yaml
@@ -4,10 +4,11 @@ info:
   name: Node Integration Enabled
   author: me9187
   severity: critical
-  tags: electron,file
-  reference: https://blog.yeswehack.com/yeswerhackers/exploitation/pentesting-electron-applications/
+  reference:
+    - https://blog.yeswehack.com/yeswerhackers/exploitation/pentesting-electron-applications/
+    - https://book.hacktricks.xyz/pentesting/pentesting-web/xss-to-rce-electron-desktop-apps
+  tags: electron,file,nodejs
   # nodeIntegration in Electron Applications means you can turn XSS into RCE by calling require('child_process').exec('COMMAND');
-  # https://book.hacktricks.xyz/pentesting/pentesting-web/xss-to-rce-electron-desktop-apps
 
 file:
   - extensions:
