--- a/exposed-panels/contentkeeper-detection.yaml
+++ b/exposed-panels/contentkeeper-detection.yaml
@@ -2,10 +2,10 @@ id: contentkeeper-detection
 
 info:
   name: ContentKeeper Cloud Detection
-  description: ContentKeeper Cloud is the next evolution of cloud filtering that provides schools a seamless and secure way to enable safer and more effective hybrid learning.
-  reference: https://www.contentkeeper.com/
   author: geeknik
   severity: info
+  description: ContentKeeper Cloud is the next evolution of cloud filtering that provides schools a seamless and secure way to enable safer and more effective hybrid learning.
+  reference: https://www.contentkeeper.com/
   tags: contentkeeper,panel
 
 requests:
@@ -18,11 +18,13 @@ requests:
       - type: status
         status:
           - 200
+
       - type: word
         words:
-          - "Copyright &copy; 2000 &ndash; 2021, ContentKeeper Technologies"
+          - "ContentKeeper Technologies</div>"
           - "ContentKeeper</span>.com"
         condition: and
+
       - type: word
         words:
           - "text/html"
