--- a/exposed-panels/okiko-sfiler-portal.yaml
+++ b/exposed-panels/okiko-sfiler-portal.yaml
@@ -1,10 +1,10 @@
 id: okiko-sfiler-portal
 
 info:
-  name: Detect OKIKO S-Filer Portal
+  name: OKIKO S-Filer Portal Detect
   author: johnk3r
-  reference: https://www.shodan.io/search?query=sfiler
   severity: info
+  reference: https://www.shodan.io/search?query=sfiler
   tags: okiko,panel
 
 requests:
@@ -16,8 +16,16 @@ requests:
     matchers:
       - type: word
         words:
-          - "okiok"
+          - "<title>S-Filer Portal - Login</title>"
         part: body
+
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - '<br\/>S\-Filer\/([A-Za-z 0-9.]+)<\/p>'
