Update and rename secmail-panel.yaml to secmail-detect.yaml

--- a/exposed-panels/secmail-detect.yaml
+++ b/exposed-panels/secmail-detect.yaml
@@ -1,7 +1,7 @@
 id: secmail-detect
 
 info:
-  name: Detect SecMail - secure email
+  name: SecMail - secure email Detect
   author: johnk3r
   severity: info
   reference: https://www.shodan.io/search?query=secmail
@@ -16,8 +16,8 @@ requests:
     matchers:
       - type: word
         words:
-          - "requestKey.jsp"
-        part: body
+          - "Path=/SecMail"
+        part: header
 
       - type: status
         status:
