--- a/exposures/tokens/digitalocean/axiom-digitalocean-key-exposure.yaml
+++ b/exposures/tokens/digitalocean/axiom-digitalocean-key-exposure.yaml
@@ -2,10 +2,10 @@ id: axiom-digitalocean-key-exposure
 
 info:
   name: DigitalOcean key exposure via Axiom
-  description: Axiom is a dynamic infrastructure framework to efficiently work with multi-cloud environments, build and deploy repeatable infrastructure focussed on offensive and defensive security.
-  reference: https://github.com/pry0cc/axiom
   author: geeknik
   severity: critical
+  description: Axiom is a dynamic infrastructure framework to efficiently work with multi-cloud environments, build and deploy repeatable infrastructure focussed on offensive and defensive security.
+  reference: https://github.com/pry0cc/axiom
   tags: axiom,digitalocean,key,exposure
 
 requests:
@@ -21,9 +21,9 @@ requests:
 
       - type: word
         words:
-          - "do_key"
-          - "region"
-          - "imageid"
+          - '"do_key"'
+          - '"region"'
+          - '"provider"'
         condition: and
 
     extractors:
